--- a/app/src/main/res/layout/fragment_breed_details.xml
+++ b/app/src/main/res/layout/fragment_breed_details.xml
@@ -3,14 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BreedFragment">
+    tools:context=".ui.breed_details.BreedDetailsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:textSize="34sp"
-        android:text="Breed Fragment"/>
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
